Block Directory: Fix double border in block list (#23625)

--- a/packages/block-directory/src/components/downloadable-block-list-item/style.scss
+++ b/packages/block-directory/src/components/downloadable-block-list-item/style.scss
@@ -17,6 +17,10 @@
 	position: relative;
 	text-align: left;
 	overflow: hidden;
+
+	& + .block-directory-downloadable-block-list-item {
+		border-top: none;
+	}
 }
 
 .block-directory-downloadable-block-list-item:last-child:not(:only-of-type) {
